modifiquei barra de navegaçao
barra de navegaçao modificada

--- a/compet.html
+++ b/compet.html
@@ -11,11 +11,10 @@
         <header>
             <nav id="navegaçao">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="expe.html">Experiências</a></li>
-                    <li><a href="compet.html">Competências</a></li>
-                    <li><a href="Contato.html">Contato</a></li>
-
+                    <li id="barra0"><a class="barra1" href="home.html">Home</a></li>
+                    <li id="barra0"><a class="barra1" href="expe.html">Experiências</a></li>
+                    <li id="barra0"><a class="barra1" href="compet.html">Competências</a></li>
+                    <li id="barra0"><a class="barra1" href="Contato.html">Contato</a></li>
                     
                 </ul>
 
