ajustando imagem do home e contato

--- a/Contato.html
+++ b/Contato.html
@@ -55,7 +55,8 @@
              
         </main>
         <div>
-            <img id="imgcontato" src="img/programador_contato.jpg" alt="programador_">
+            <source media="(max-width:750px)" srcset="img/programador_contato_p.jpg">
+            <img id="imgcontato" src="img/programador_contato.jpg" alt="programador">
 
         </div>
 
