mudanças para a home e contato bem especificamente em fonte

--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
                                 <br>Lucas <em>Vam Baster</em> ?
                             </h1>
                     
-                            <p>Lucas Vam Baster, natural de Rio Maria, é um profissional dinâmico de 33 anos com uma trajetória profissional diversificada e sólida. Embora tenha nascido em Rio Maria, ele mudou-se para Goiânia aos 1 ano de idade e construiu sua vida na cidade.
+                            <p id="paragrafo_home">Lucas Vam Baster, natural de Rio Maria, é um profissional dinâmico de 33 anos com uma trajetória profissional diversificada e sólida. Embora tenha nascido em Rio Maria, ele mudou-se para Goiânia aos 1 ano de idade e construiu sua vida na cidade.
 
                                 Casado e pai de um filho, Lucas é um homem de família que equilibra suas responsabilidades pessoais e profissionais com habilidade e dedicação. Com vasta experiência em diferentes áreas, Lucas está atualmente em processo de transição de carreira para o campo da Tecnologia da Informação (TI).</p>
                     
